<resources>
    <string name="app_name">Shopping List</string>
    <string name="button_add">Add</string>
    <string name="text_hint_item">Item</string>
    <string name="menu_new">New list</string>
    <string name="menu_delete">Remove list</string>
    <string name="menu_share">Share list</string>
    <string name="menu_rename">Rename list</string>
    <string name="menu_view">View my lists</string>
    <string name="menu_fetch">Fetch data</string>
</resources>
