<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuFetch"
        android:title="@string/menu_fetch" />
    <item
        android:id="@+id/menuViewLists"
        android:title="@string/menu_view" />
    <item
        android:id="@+id/menuRename"
        android:title="@string/menu_rename" />
    <item
        android:id="@+id/menuNewList"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_new"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuRemoveList"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuShareList"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:showAsAction="always" />
</menu>